# wbmaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEV_GUIDE.md  LICENSE  Makefile  PROJECT_IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: config.ini  test_data_to_info.py  test_item.py  test_wb.py
wb/: wb.py
wbmaker/: __init__.py  data_to_info.py  item.py  wb.py
