[tool.poetry]
name = "wbmaker"
version = "0.0.11"
description = "Establishes a connection to a Wikibase instance and provides methods for interacting with it."
authors = ["Sky Bristol <skybristol@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/skybristol/wbmaker"
license = "MIT"
keywords = ["wikibase", "wikibaseintegrator", "mwclient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
wikibaseintegrator = "^0.12.4"
mwclient = "^0.10.1"
requests = "^2.28.2"
pandas = "^2.0.0"
networkx = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
